--- a/package.json
+++ b/package.json
@@ -30,6 +30,14 @@
     "ethereum-waffle": "^3.1.1",
     "ethers": "^5.0.0",
     "hardhat": "^2.3.0",
-    "husky": "^4.2.5"
+    "husky": "^4.2.5",
+    "nodemon": "^2.0.16"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "pg": "^8.7.3",
+    "sequelize": "^6.21.0"
   }
 }
