--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "pg": "^8.7.3",
     "sequelize": "^6.21.0"
   }
